# archviz-3d

./: CHANGELOG.md  README.md  SKILL.md  pyproject.toml
archviz3d/: __init__.py  cli.py  engine.py  mcp_server.py
examples/: explosion-spec.json  hair-dryer-exploded.html  teaching-building-3d.html
references/: 3d-models-sources.md  gotchas.md  mechlab-analysis.md  threejs-gotchas.md
references/3d/: boundary-declaration.md
scripts/: render_3d_explosion.py
templates/html/: _archviz-3d-contract.html  _archviz-deps.html  _archviz-theme.html  threejs-archviz.html  threejs-floorplan.html
